import("//build/buildflag_header.gni")
import("//build/config/chrome_build.gni")
import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")
import("//build/config/locales.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/ui.gni")
import("//ui/base/ui_features.gni")
import("//v8/gni/v8.gni")
import("//chrome/version.gni")
import("//build/compiled_action.gni")
import("//build/util/branding.gni")
import("//build_overrides/v8.gni")
import("//media/cdm/ppapi/cdm_paths.gni")

executable("electron_app") {
  output_name = "brave"

  configs += [ "//build/config/compiler:wexit_time_destructors"]
  defines = []
  deps = [
     "//electron:electron_framework_resources",
     "//electron:electron_app_resources",
     "//electron/build/node:node_resources",
     "//build/config/sanitizers:deps",
     "//build/linux:fontconfig",
     "//chrome/common:version_header",
     "//components/crash/content/app",
     "//components/policy:generated",
     "//content/app/resources",
     "//content/public/app:both",
     "//crypto",
     "//dbus",
     "//electron:browser_dependencies",
     "//electron:child_dependencies",
     "//net:net_resources",
     "//third_party/wtl",
     "//sandbox" ,
     "//third_party/cld",
     "//third_party/speech-dispatcher",
     "//ui/compositor",
     "//ui/gfx/x",
     "//ui/views",
     "//ui/views/controls/webview/",
     "//ui/wm",
  ]

  ldflags = [
    "-Wl,-rpath=\$ORIGIN/",
    "-rdynamic",
  ]

  public_configs = [
    "//electron/build:electron_config",
  ]

  sources = [
    "//electron/atom/app/atom_main.cc",
    "//electron/atom/app/atom_main.h",
  ]

}
